# infra-lib

./: .gitignore  README.md  myREADME.md  plan.md  pyproject.toml  rationale.md  requirements.txt  things.md  things2.md  todo.md
.agents/: agents.yaml
infra_lib/: __init__.py  _auth.py  _cli.py  _config.py  _domain.py  _health.py  _progress.py  _provision.py  _resolve.py  _spec.py  _transfer.py  _tui.py  config.py  models.py  pipeline.py  progress.py
infra_lib/cli/: guide.py  main.py  reporter.py  tui.py
infra_lib/core/: container.py  domain.py  health.py  keys.py  registry.py  transfer.py
infra_lib/providers/: __init__.py  base.py
infra_lib/providers/azure/: auth.py  provider.py  provision.py  sizes.py
infra_lib/providers/runpod/: __init__.py  auth.py  provider.py  provision.py  sizes.py
infra_lib/templates/: infra.yml
test/: agent-lifecycle.md  lifecycle_check.py
