[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-lib"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-azure-native>=3.0.0,<4.0.0",
    "paramiko>=3.0.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-subscription>=3.0.0",
    "azure-mgmt-authorization>=3.0.0",
    "azure-mgmt-compute>=30.0.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
infra-lib = "infra_lib.cli.main:main"

[tool.setuptools.packages.find]
include = ["infra_lib*"]

[tool.setuptools.package-data]
infra_lib = ["templates/*.yml"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "types-PyYAML",
    "types-paramiko",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=infra_lib --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
